k8s/apps/services/filebrowser/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-onlyoffice-filebrowser-in
spec:
  podSelector:
    matchLabels:
      app: onlyoffice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: services
          podSelector:
            matchLabels:
              app.kubernetes.io/name: filebrowser
      ports:
        - protocol: TCP
          port: web
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-onlyoffice-filebrowser-out
spec:
  podSelector:
    matchLabels:
      app: filebrowser
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: services
          podSelector:
            matchLabels:
              app.kubernetes.io/name: onlyoffice
      ports:
        - protocol: TCP
          port: web
